# too-readable

./: .gitignore  CMakeLists.txt  README.md  TooReadable.kdev4  testing_code.tor  tests.cpp
.github/workflows/: build.yml
sample_code/: calculator.tor  testing_code.tor  testing_lib.tor
sample_code/parsing_fails/: no_args.tor  non_complete_underline.tor  skipped_number.tor  undefined_function.tor
src/: ReadFile.cpp  ReadFile.h  builtinfunction.cpp  builtinfunction.h  exception.cpp  exception.h  expression.cpp  expression.h  function.cpp  function.h  main.cpp  value.cpp  value.h
src/parse-states/: README.md  divided.cpp  divided.h  parsed.cpp  parsed.h  unparsed.cpp  unparsed.h
